welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: type mismatch;
 found   : String
 required: Int
    colore(tab(litMessage()))
                         ^Array2:21: error: value % is not a member of String
      colore(tab((litMessage()+j)%(tab.length)))
                                 ^